footer et images

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12 header-content">
-            <img src="img/CafeduMarcheLogo1.aff7e564.svg" alt="" class="logo">
+            <img src="img/CafeduMarcheLogo1.svg" alt="" class="logo">
             <div class="link">
               <a href="#menu">Carte</a>
               <a href="#info">Infos</a>
@@ -24,7 +24,7 @@
               <a href="#contacts">Contacts</a>
               <!-- Début Bouton pour le menu burger -->
               <button class="menu-toggle" aria-label="Menu Toggle">
-                <img src="img/line.3.horizontal.85d20f47.svg" alt="Menu Toggle">
+                <img src="img/line.3.horizontal.svg" alt="Menu Toggle">
               </button>
               <!-- Fin Bouton pour le menu burger -->
               <!-- SVG pour le menu déroulant -->
@@ -37,7 +37,7 @@
                   <a href="#contacts">Contacts</a>
                 </div>
                 <!-- Ajoutez l'image de la croix pour fermer le menu déroulant -->
-                <img src="img/croix.afd4eb4d.svg" alt="Menu Dropdown" class="close-button">
+                <img src="img/croix.svg" alt="Menu Dropdown" class="close-button">
               </div>
               <!-- SVG pour le menu déroulant -->
             </div>
@@ -48,10 +48,10 @@
 
     <main>
       <div class="home">
-        <img src="img/CafeDuMarcheTables.d9f366c1.jpg" alt="" class="background-image">
+        <img src="img/CafeDuMarcheTables.jpg" alt="" class="background-image">
         <h1>
           <div class="title-container">
-            <img src="img/CafeDuMarcheLogo2.cd1c56c6.svg" alt="">
+            <img src="img/CafeDuMarcheLogo2.svg" alt="">
           </div>
         </h1>
       </div>
@@ -81,7 +81,7 @@
         <div class="container">
           <div class="row">
             <div class="col-12 col-xl-6 order-xl-2">
-              <img src="img/croissants.e4ea1285.jpg" alt="">
+              <img src="img/croissants.jpg" alt="">
             </div>
             <div class="col-12 col-xl-6 order-xl-1">
               <h3>Cuisine Saisonnière et Variée</h3>
@@ -98,20 +98,20 @@
               <div class="carousel-container">
                 <!-- Flèche de gauche pour le carousel -->
                 <div class="carousel-arrow left-arrow">
-                  <img src="img/chevron.left.569f4cd4.svg" alt="Flèche gauche">
+                  <img src="img/chevron.left.svg" alt="Flèche gauche">
                 </div>
 
                 <!-- Carousel d'images -->
                 <div class="carousel">
-                  <img src="img/plats.8d788431.jpg" alt="Image 1">
-                  <img src="img/plats2.560b1675.jpg" alt="Image 2">
-                  <img src="img/plats3.81e33b55.jpg" alt="Image 3">
+                  <img src="img/plats.jpg" alt="Image 1">
+                  <img src="img/plats2.jpg" alt="Image 2">
+                  <img src="img/plats3.jpg" alt="Image 3">
                   <!-- Ajoutez plus d'images ici selon vos besoins -->
                 </div>
 
                 <!-- Flèche de droite pour le carousel -->
                 <div class="carousel-arrow right-arrow">
-                  <img src="img/chevron.right.3f61c7a0.svg" alt="Flèche droite">
+                  <img src="img/chevron.right.svg" alt="Flèche droite">
                 </div>
               </div>
             </div>
@@ -162,7 +162,7 @@
               <a href="#reserver">
                 <div class="button">Réserver la salle</div>
               </a>
-              <img src="img/SalleManger.0db8ef87.jpg" alt="">
+              <img src="img/SalleManger.jpg" alt="">
             </div>
           </div>
         </div>
@@ -176,26 +176,26 @@
             </div>
             <div class="col-12 col-md-4">
               <p>
-                <img src="img/checkmark.74c59e3a.svg" alt="">Vente à emporter <br>
-                <img src="img/checkmark.74c59e3a.svg" alt="">Options pour Tous les
+                <img src="img/checkmark.svg" alt="">Vente à emporter <br>
+                <img src="img/checkmark.svg" alt="">Options pour Tous les
                 Goûts <br>
-                <img src="img/checkmark.74c59e3a.svg" alt="">Produits frais
+                <img src="img/checkmark.svg" alt="">Produits frais
               </p>
             </div>
             <div class="col-12 col-md-4">
               <p>
-                <img src="img/checkmark.74c59e3a.svg" alt="">Cuisine de saison et fait
+                <img src="img/checkmark.svg" alt="">Cuisine de saison et fait
                 maison <br>
-                <img src="img/checkmark.74c59e3a.svg" alt="">Terrasse <br>
-                <img src="img/checkmark.74c59e3a.svg" alt="">Salle à Manger
+                <img src="img/checkmark.svg" alt="">Terrasse <br>
+                <img src="img/checkmark.svg" alt="">Salle à Manger
               </p>
             </div>
             <div class="col-12 col-md-4">
               <p>
-                <img src="img/checkmark.74c59e3a.svg" alt="">Ambiance Conviviale <br>
-                <img src="img/checkmark.74c59e3a.svg" alt="">Accueil de petits groupes
+                <img src="img/checkmark.svg" alt="">Ambiance Conviviale <br>
+                <img src="img/checkmark.svg" alt="">Accueil de petits groupes
                 <br>
-                <img src="img/checkmark.74c59e3a.svg" alt="">Bon cadeau
+                <img src="img/checkmark.svg" alt="">Bon cadeau
               </p>
             </div>
           </div>
@@ -270,7 +270,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <img src="img/CafeDuMarcheLogo3.9b4ce2f4.svg" alt="" class="logofooter">
+            <img src="img/CafeDuMarcheLogo3.svg" alt="" class="logofooter">
           </div>
 
           <div class="row text-center">
@@ -284,21 +284,21 @@
               <div class="col-12 col-md-6 col-lg-4">
                 <a href="tel:+41764651078">
                   <p>
-                    <img src="img/phone.fill.13929f4e.svg" alt="">+41 (0)76 465 10 78
+                    <img src="img/phone.fill.svg" alt="">+41 (0)76 465 10 78
                   </p>
                 </a>
               </div>
               <div class="col-12 col-md-6 col-lg-4">
                 <a href="mailto:catherinebal2weck@gmail.com">
                   <p>
-                    <img src="img/envelope.fill.ad43dad7.svg" alt="">catherinebal2weck@gmail.com
+                    <img src="img/envelope.fill.svg" alt="">catherinebal2weck@gmail.com
                   </p>
                 </a>
               </div>
               <div class="col-12 col-md-12 col-lg-4">
                 <a href="https://www.instagram.com/cafe_du_marche_fribourg/" target="_blank">
                   <p>
-                    <img src="img/instagram.2e10e8bb.svg" alt="">cafe_du_marche_fribourg
+                    <img src="img/instagram.svg" alt="">cafe_du_marche_fribourg
                   </p>
                 </a>
               </div>
