ajouts lignes cooking

--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@
               <img src="img/croissants.jpg" alt="">
             </div>
             <div class="col-12 col-xl-6 order-xl-1">
+              <!-- <div class="col-10 col-md-4 offset-1 offset-md-4"> -->
+              <div class="col-4 offset-4">
+                <div class="cookingline"></div>
+              </div>
               <h3>Cuisine Saisonnière et Variée</h3>
               <p>
                 Une carte éphémère, sur ardoise, changeant au gré des saisons.
@@ -93,6 +97,9 @@
               <a href="#menu">
                 <div class="button">Voir la carte de la semaine</div>
               </a>
+              <div class="col-4 offset-4">
+                <div class="cookingline"></div>
+              </div>
             </div>
             <div class="col-12 order-xl-3">
               <!-- Carousel d'images -->
