--- a/index.html
+++ b/index.html
@@ -120,7 +120,13 @@
           <div class="container">
             <div class="row">
               <div class="col-12">
+                <div class="col-6 offset-3">
+                  <div class="cardline"></div>
+                </div>
                 <h3>Cette semaine, à midi, nous vous proposons :</h3>
+                <div class="col-4 offset-4">
+                  <div class="cardline"></div>
+                </div>
               </div>
               <div class="col-12">
                 <p>
@@ -138,6 +144,9 @@
                   Légumes rotis au Pesto de sauge, Polenta crémeuse et Oeuf
                   mollet
                 </p>
+                <div class="col-4 offset-4">
+                  <div class="cardline"></div>
+                </div>
               </div>
             </div>
           </div>
