--- a/index.html
+++ b/index.html
@@ -218,6 +218,9 @@
           <div class="row">
             <div class="col-12 col-md-6">
               <div class="infocard">
+                <div class="col-4 offset-4">
+                  <div class="infolineone"></div>
+                </div>
                 <div class="row">
                   <div class="col-12">
                     <h3>Horaires</h3>
@@ -243,16 +246,25 @@
                     </div>
                   </div>
                 </div>
+                <div class="col-4 offset-4">
+                  <div class="infolinetwo"></div>
+                </div>
               </div>
             </div>
             <div class="col-12 col-md-6">
               <div class="infocard" id="infocard2">
+                <div class="col-4 offset-4">
+                  <div class="infolineone"></div>
+                </div>
                 <h3>Adresse</h3>
                 <p>
                   Café du Marché <br>
                   Rue des Epouses <br>
                   10 CH - 1700 Fribourg <br><br>
                 </p>
+                <div class="col-4 offset-4">
+                  <div class="infolinetwo"></div>
+                </div>
               </div>
             </div>
           </div>
