ajouts lignes titres

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="container">
           <div class="row">
             <div class="col-12">
-              <h2>
+              <h2 class="title-with-lines">
                 Votre Escale Gourmande <br>
                 au Cœur de Fribourg
               </h2>
@@ -157,7 +157,7 @@
         <div class="container">
           <div class="row">
             <div class="col-12">
-              <h3>La Sympathique Salle à Manger</h3>
+              <h3 class="title-with-lines">La Sympathique Salle à Manger</h3>
               <p>
                 Notre établissement dispose d’une salle à manger pouvant être
                 privatisée pour vos apéritifs ou soirées d’entreprise, vos repas
@@ -177,7 +177,7 @@
         <div class="container">
           <div class="row">
             <div class="col-12">
-              <h3>Services</h3>
+              <h3 class="title-with-lines">Services</h3>
             </div>
             <div class="col-12 col-md-4">
               <p>
@@ -275,7 +275,7 @@
         <div class="container">
           <div class="row">
             <div class="col-12">
-              <h3>Réservation</h3>
+              <h3 class="title-with-lines">Réservation</h3>
               <p>
                 Pour réserver veuillez nous contacter par téléphone au <br>
                 +41 (0)26 565 56 43.
