--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </header>
 
     <main>
-      <div class="home">
+      <div class="home parallax">
         <img src="img/CafeDuMarcheTables.jpg" alt="" class="background-image">
         <h1>
           <div class="title-container">
